--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -1,3 +1,29 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+.box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+
+}
+.input-group{
+    font-size: 22px;
+}
+
 .theList{
     list-style: none;
+}
+.contentArea{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-radius: 5px;
+    padding: 5px;
+    background-color: rgba(80, 94, 94, 0.342);
+
+    
 }
